@@ -3,7 +3,7 @@
 //	FEATURES
 //	You can turn features on/off sitewide
 //
-$sys_use_cvs={sys_use_cvs};
+$sys_use_scm={sys_use_scm};
 $sys_use_tracker={sys_use_tracker};
 $sys_use_forum={sys_use_forum};
 $sys_use_pm={sys_use_pm};
