@@ -70,9 +70,6 @@ $default_trove_cat={default_trove_cat};
 // JPGRAPH Package
 $sys_path_to_jpgraph='{sys_path_to_jpgraph}';
 
-// CVSWEB
-$sys_path_to_cvsweb='{sys_path_to_cvsweb}';
-
 // Show Source
 //	Setting this to 1 will add a "Show Source" link to the bottom of each page
 $sys_show_source={sys_show_source};
