@@ -1,5 +1,6 @@
 gforge (3.3.0-5) unstable; urgency=low
 
+  * [Christian] Some renaming cvs -> scm
   * [Christian] Added new sql upgrade (2004*.sql)
   * [Christian] Stable backbort
   * [Christian] Added = ${Source-Version} for gforge-mta-postfix
@@ -16,7 +17,7 @@ gforge (3.3.0-5) unstable; urgency=low
   * [Christian] Made system management OO (see Changelog)
   * [Roland] SCM systems are now pluginified.
 
- -- Roland Mas <lolando@debian.org>  Sun, 16 May 2004 18:53:06 +0200
+ -- Christian Bayle <bayle@debian.org>  Wed, 21 Jul 2004 22:19:29 +0200
 
 gforge (3.2.1-4) experimental; urgency=low
 
